# llm-inference-engine

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/: bench_attention.py  bench_int8.py  bench_paged_decode.py  bench_throughput.py  run_all.py
proto/: inference.proto
results/: PROFILE.md  REPORT.md  benchmark_data.json  nsys_engine.nsys-rep  profile_summary.txt
scripts/: demo_concurrent.py  demo_gpt2.py  demo_scheduler.py  gen_proto.ps1  gen_proto.sh  profile_engine.py  smoke_client.py
src/backends/: base.py  pytorch_eager.py
src/kernels/cuda/: paged_decode.cu  paged_decode.py
src/kernels/triton/: __init__.py  flash_attention.py  paged_decode.py
src/kv_cache/: allocator.py  block_table.py  kv_pool.py
src/model/: dummy.py  gpt2.py  gpt2_runner.py  types.py
src/scheduler/: engine.py  scheduler.py  sequence.py
src/service/: server.py
tests/: test_block_allocator.py  test_block_table.py  test_flash_attention.py  test_gpt2_correctness.py  test_paged_decode.py  test_scheduler.py
