[project]
name = "llm-inference-engine"
version = "0.1.0"
description = "Single-GPU LLM inference engine with paged KV cache, continuous batching, and custom attention kernels."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:grpc.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
